--- a/.editorconfig
+++ b/.editorconfig
@@ -10,8 +10,10 @@ trim_trailing_whitespace = true
 
 [*.yml]
 indent_style = space
-indent_size = 2
+indent_size = 4
+insert_final_newline = true
 
 [pom.xml]
 indent_style = space
 intent_size = 4
+insert_final_newline = true
