--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,13 +1,13 @@
 name: ${project.name}
 version: ${project.version}
 description: ${project.description}
-author: maciekmm
+author: ${project.authors}
 website: ${project.url}
-main: ${main.class}
+main: ${project.main}
 depend: [ProtocolLib]
 commands:
   auracheck:
-    description: Check if player has aura hack
-    usage: /<command> <username> - checks for aura hack
+    description: Check if player has killaura hack
+    usage: /<command> <username> - checks for killaura hack
     aliases: [ac]
     permission: auracheck.check
