--- a/pom.xml
+++ b/pom.xml
@@ -40,12 +40,44 @@
             <artifactId>bukkit</artifactId>
             <version>1.8.8-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
+            <exclusions>
+            	<exclusion>
+            		<artifactId>json-simple</artifactId>
+            		<groupId>com.googlecode.json-simple</groupId>
+            	</exclusion>
+            	<exclusion>
+            		<artifactId>persistence-api</artifactId>
+            		<groupId>javax.persistence</groupId>
+            	</exclusion>
+            	<exclusion>
+            		<artifactId>gson</artifactId>
+            		<groupId>com.google.code.gson</groupId>
+            	</exclusion>
+            	<exclusion>
+            		<artifactId>guava</artifactId>
+            		<groupId>com.google.guava</groupId>
+            	</exclusion>
+            	<exclusion>
+            		<artifactId>snakeyaml</artifactId>
+            		<groupId>org.yaml</groupId>
+            	</exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.comphenix.protocol</groupId>
             <artifactId>ProtocolLib</artifactId>
             <version>3.6.6-SNAPSHOT</version>
             <scope>provided</scope>
+            <exclusions>
+            	<exclusion>
+            		<artifactId>cglib-nodep</artifactId>
+            		<groupId>cglib</groupId>
+            	</exclusion>
+            	<exclusion>
+            		<artifactId>BukkitExecutors</artifactId>
+            		<groupId>com.comphenix.executors</groupId>
+            	</exclusion>
+            </exclusions>
         </dependency>
         <!-- RELOCATE ME! -->
         <dependency>
@@ -53,6 +85,20 @@
             <artifactId>PacketWrapper</artifactId>
             <version>1.8.7-R0.1-SNAPSHOT</version>
             <scope>compile</scope>
+            <exclusions>
+            	<exclusion>
+            		<artifactId>spigot-api</artifactId>
+            		<groupId>org.spigotmc</groupId>
+            	</exclusion>
+            	<exclusion>
+            		<artifactId>spigot</artifactId>
+            		<groupId>org.spigotmc</groupId>
+            	</exclusion>
+            	<exclusion>
+            		<artifactId>ProtocolLib</artifactId>
+            		<groupId>com.comphenix.protocol</groupId>
+            	</exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
