--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.8.8-R0.1-SNAPSHOT</version>
+            <version>1.9.4-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
             <exclusions>
             	<exclusion>
@@ -65,8 +65,8 @@
         </dependency>
         <dependency>
             <groupId>com.comphenix.protocol</groupId>
-            <artifactId>ProtocolLib</artifactId>
-            <version>3.6.6-SNAPSHOT</version>
+            <artifactId>ProtocolLib-API</artifactId>
+            <version>4.0-SNAPSHOT</version>
             <scope>provided</scope>
             <exclusions>
             	<exclusion>
@@ -83,7 +83,7 @@
         <dependency>
             <groupId>com.comphenix.packetwrapper</groupId>
             <artifactId>PacketWrapper</artifactId>
-            <version>1.8.7-R0.1-SNAPSHOT</version>
+            <version>1.9-R0.1-SNAPSHOT</version>
             <scope>compile</scope>
             <exclusions>
             	<exclusion>
@@ -95,7 +95,7 @@
             		<groupId>org.spigotmc</groupId>
             	</exclusion>
             	<exclusion>
-            		<artifactId>ProtocolLib</artifactId>
+            		<artifactId>ProtocolLib-API</artifactId>
             		<groupId>com.comphenix.protocol</groupId>
             	</exclusion>
             </exclusions>
